--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-sm-10 col-sm-offset-1 box flat-bottom bottom-pad">
           <div class="tab-content">
             <div class="tab-pane active" id="current">
-              <h2 class="header">Controls</h2>
+              <h2 class="header">Cloud Bit Controls</h2>
               <div class="rule"></div>
               <div class="row">
                 <div class="col-sm-12">
@@ -74,6 +74,7 @@
               </div>
             </div>
             <div class="tab-pane" id="settings">
+            <h2 class="header">Cloud Bit Settings</h2>
               <form role="form">
                 <div class="form-group">
                   <label for="deviceID">Device ID:</label>
@@ -86,6 +87,8 @@
                 <button id="saveSettings" class="btn btn-success">Save Settings</button>
                 <button id="clearSettings" class="btn btn-success">Clear Settings</button>
               </form>
+              <div class="rule"></div>
+              <button class="btn btn-warning">Test</button>
             </div>
           </div>
           
